# animoji_cpp

./: README.md
animoji_cpp/app/: CMakeLists.txt  build.gradle
animoji_cpp/app/src/androidTest/java/com/tcl/animoji_cpp/: ExampleInstrumentedTest.java
animoji_cpp/app/src/main/: AndroidManifest.xml
animoji_cpp/app/src/main/cpp/: blob.cpp  blob.hpp  detection.cpp  detection.hpp  face_prediction.cpp  face_prediction.h  landmark.cpp  landmark.hpp  math_functions.cpp  math_functions.hpp  native-lib.cpp
animoji_cpp/app/src/main/java/com/tcl/animoji_cpp/: MainActivity.java
animoji_cpp/app/src/main/res/layout/: activity_main.xml
animoji_cpp/app/src/main/res/values/: strings.xml
animoji_cpp/app/src/test/java/com/tcl/animoji_cpp/: ExampleUnitTest.java
animoji_cpp/gradle/wrapper/: gradle-wrapper.properties
